[project]
name = "mice3d"
version = "0.1.0"
description = "Unofficial implementation of 3D-MICE from Luo et al. (2017)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "benchpots>=0.4",
]
